k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lodestar-service
  labels:
    app: lodestar
spec:
  type: ClusterIP
  selector:
    app: lodestar
  ports:
  - port: 8080
    targetPort: 8080
    name: http
    protocol: TCP
